amplio la api a ciudades y comienzo places
